<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_health_care_clinics"
            android:checked="true"
            android:icon="@drawable/ic_clinic_24dp"
            android:title="@string/health_care_clinics" />

        <item
            android:id="@+id/menu_health_care_doctors"
            android:icon="@drawable/ic_doctor_24dp"
            android:title="@string/health_care_doctors" />

        <item
            android:id="@+id/menu_health_care_veterinary"
            android:icon="@drawable/ic_pet_24dp"
            android:title="@string/health_care_veterinary" />

        <item
            android:id="@+id/menu_health_care_diseases"
            android:icon="@drawable/ic_disease_24dp"
            android:title="@string/health_care_diseases" />

        <item
            android:id="@+id/menu_health_care_articles"
            android:icon="@drawable/ic_article_24dp"
            android:title="@string/health_care_articles" />
    </group>

    <item android:title="@string/str_favourite_title">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_favourite_list"
                    android:icon="@drawable/ic_fav_24dp"
                    android:title="@string/str_favourite" />
            </group>
        </menu>
    </item>

    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_help"
                    android:icon="@drawable/ic_help_24dp"
                    android:title="@string/str_help" />
                <item
                    android:id="@+id/menu_about_us"
                    android:icon="@drawable/ic_about_us_24dp"
                    android:title="@string/str_about_us" />
            </group>
        </menu>
    </item>

</menu>