<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/padding8"
        android:paddingRight="@dimen/padding8"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.padc.healthcaredirectory.activities.PhamacyDetailActivity">

        <com.padc.healthcaredirectory.components.DynamicHeightImageView
            android:id="@+id/img_clinic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/phamacy_picture" />

        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding4"
            cardview:cardCornerRadius="5dp"
            cardview:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding8">

                <com.padc.healthcaredirectory.components.MMTextView
                    android:id="@+id/tv_phamacy_name_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/padding8"
                    android:text="@string/str_phamacy_name_label" />


                <View
                    android:id="@+id/view_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line_color"

                    />


                <com.padc.healthcaredirectory.components.MMTextView
                    android:id="@+id/tv_phamacy_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding8"
                    android:text="@string/str_phamacy_name" />

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding4"
            cardview:cardCornerRadius="5dp"
            cardview:cardElevation="4dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding8">


                <com.padc.healthcaredirectory.components.MMTextView
                    android:id="@+id/tv_phamacy_info_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/padding8"
                    android:text="@string/str_phamacy_info_label" />

                <View
                    android:id="@id/view_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line_color" />

                <com.padc.healthcaredirectory.components.MMTextView
                    android:id="@+id/tv_phamacy_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding8"
                    android:text="@string/str_phamacy_info" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding4"
            cardview:cardCornerRadius="5dp"
            cardview:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding8">

                <com.padc.healthcaredirectory.components.MMTextView
                    android:id="@+id/tv_phamacy_address_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/padding8"
                    android:text="@string/str_phamacy_address_label" />

                <View
                    android:id="@id/view_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line_color" />

                <com.padc.healthcaredirectory.components.MMTextView
                    android:id="@+id/tv_phamacy_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding8"
                    android:text="@string/str_phamacy_address" />


            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding4"
            cardview:cardCornerRadius="5dp"
            cardview:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding8">

                <com.padc.healthcaredirectory.components.MMTextView
                    android:id="@+id/tv_phamacy_phone_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/padding8"
                    android:text="@string/str_phamacy_phone_label" />

                <View
                    android:id="@id/view_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line_color" />

                <com.padc.healthcaredirectory.components.MMTextView
                    android:id="@+id/tv_phamacy_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding8"
                    android:text="@string/str_phamacy_phone" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding4"
            cardview:cardCornerRadius="5dp"
            cardview:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding8">

                <com.padc.healthcaredirectory.components.MMTextView
                    android:id="@+id/tv_phamacy_mail_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/padding8"
                    android:text="@string/str_phamacy_mail_label" />

                <View
                    android:id="@id/view_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line_color" />

                <com.padc.healthcaredirectory.components.MMTextView
                    android:id="@+id/tv_phamacy_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding8"
                    android:text="@string/str_phamacy_mail" />
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding4"
            cardview:cardCornerRadius="5dp"
            cardview:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding8">


                <com.padc.healthcaredirectory.components.MMTextView
                    android:id="@+id/tv_clinic_website_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/padding8"
                    android:text="@string/str_clinic_website_label" />

                <View
                    android:id="@id/view_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line_color"
                    android:paddingLeft="@dimen/padding4"
                    android:paddingRight="@dimen/padding4" />

                <com.padc.healthcaredirectory.components.MMTextView
                    android:id="@+id/tv_clinic_website"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding8"
                    android:text="@string/str_clinic_website" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding4"
            cardview:cardCornerRadius="5dp"
            cardview:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding8">


                <com.padc.healthcaredirectory.components.MMTextView
                    android:id="@+id/tv_clinic_facebook_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/padding8"
                    android:text="@string/str_clinic_facebook_label" />

                <View
                    android:id="@id/view_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line_color"
                    android:paddingLeft="@dimen/padding4"
                    android:paddingRight="@dimen/padding4" />

                <com.padc.healthcaredirectory.components.MMTextView
                    android:id="@+id/tv_clinic_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding8"
                    android:text="@string/str_clinic_facebook" />
            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>
</ScrollView>