<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium"
    tools:context="com.padc.healthcaredirectory.activities.HospitalDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- title -->
        <com.padc.healthcaredirectory.components.MMTextView
            style="@style/DetailInfoTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_medium"
            android:text="@string/str_hospital_info_label" />

        <!-- Address -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_small">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_location_24dp" />

            <com.padc.healthcaredirectory.components.MMTextView
                android:id="@+id/tv_service_address"
                style="@style/ContentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:clickable="true"
                android:text="@string/dummy_address" />

        </LinearLayout>

        <!-- Phones -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_small">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:src="@drawable/ic_phone_24dp" />

            <com.padc.healthcaredirectory.components.MMTextView
                android:id="@+id/tv_service_phone"
                style="@style/ContentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:clickable="true"
                android:text="@string/dummy_phone_1" />

        </LinearLayout>

        <!-- Email -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_small">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:src="@drawable/ic_email_24dp" />

            <com.padc.healthcaredirectory.components.MMTextView
                android:id="@+id/tv_service_email"
                style="@style/ContentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:clickable="true"
                android:text="@string/str_email" />

        </LinearLayout>

        <!-- Website -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_small">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:src="@drawable/ic_website_24dp" />

            <com.padc.healthcaredirectory.components.MMTextView
                android:id="@+id/tv_service_website"
                style="@style/ContentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:clickable="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/str_website" />

        </LinearLayout>

        <!-- Facebook -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_small">

            <ImageView
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/icon_size"
                android:layout_gravity="top"
                android:src="@drawable/ic_facebook_24dp" />

            <com.padc.healthcaredirectory.components.MMTextView
                android:id="@+id/tv_service_facebook"
                style="@style/ContentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium_2"
                android:clickable="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/str_facebook" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

