<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="@dimen/card_elevation"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        style="@style/HealthCareCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_medium_1"
        android:paddingTop="@dimen/margin_medium_1">

        <com.padc.healthcaredirectory.components.MMTextView
            android:id="@+id/tv_title"
            style="@style/PrimaryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_toRightOf="@+id/iv_icon"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/health_care_articles"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <com.padc.healthcaredirectory.components.MMTextView
            android:id="@+id/tv_ref"
            style="@style/ArticleDate"
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_toRightOf="@+id/iv_icon"
            android:text="@string/dummy_date"/>

        <com.padc.healthcaredirectory.components.MMTextView
            android:id="@+id/tv_article_description"
            style="@style/ContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/iv_icon"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_toRightOf="@+id/iv_icon"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/dummy_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />


        <com.padc.healthcaredirectory.components.MMTextView
            android:id="@+id/tv_readmore"
            style="@style/LinkText"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_toRightOf="@+id/iv_icon"
            android:text="@string/str_readmore"/>

        <ImageView
            android:id="@+id/img_article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:scaleType="centerCrop"
            android:src="@drawable/article_img" />

    </LinearLayout>
</android.support.v7.widget.CardView>